--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
