--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "flutterwave-node-v3": "^1.0.11",
     "helmet": "^6.0.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "paystack": "^2.0.1",
+    "paystack-api": "^2.0.6",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "query-string": "^7.1.1",
+    "request": "^2.88.2",
     "sequelize": "^6.23.2"
   },
   "main": "app.js",
